Change & Version Information
============================

The following is a summary of changes and improvements to
:mod:`eulexistdb`.  New features in each version should be listed, with
any necessary information about installation or upgrade notes.

0.19.1
------

* Basic support for preceding/following/preceding-sibling/following-sibling
  queries when returning additional fields from a query.

0.19
----
* New method for sorting a :class:`eulexistdb.query.QuerySet`
  by a raw XPath, for those cases when the desired sort xpath cannot be
  specified as an :mod:`xmlmap` field:
  :meth:`eulexistdb.query.QuerySet.order_by_raw`
* The Django manage.py script for managing eXist-DB index configuration
  files now takes optional username and password credentials, for use
  with sites that run in guest mode or with limited access.
* bugfix: :class:`~eulexistdb.query.QuerySet` greater than and less than
  filters no longer assume numeric values should be treated as numbers,
  to allow comparison of string values of numbers.
* bugfix: :class:`~eulexistdb.query.Xquery` now correctly generates
  xqueries with more than one where statement.

0.18
----

* New filters and operators supported on :class:`eulexistdb.query.QuerySet`:
  * ``exists`` - filter on the presence of absence of a node
  * comparison operators ``gt``, ``gte``, ``lt``, ``lte``
* Support for excluding documents using all existing filters
  with new method :meth:`eulexistdb.query.QuerySet.exclude`.

0.17
----

* Support for restricting xqueries to a single document in
  :class:`eulexistdb.query.QuerySet` with ``document_path`` filter.

0.16
----

* Development requirements can now be installed as an optional requirement
  of the eulexistdb package (``pip install "eulexistdb[dev]"``).
* Unit tests have been updated to use :mod:`nose`
* Provides a nose plugin to set up and tear down an eXist database collection
  for tests, as an alternative to the custom test runners.

0.15.2
------
